# symbolic-regression

./: README.md  main.py  pyproject.toml  run_experiment.py
configs/: default.yaml
results/logs/: bernoullis-equation_runs.csv  electric-power_runs.csv  keplers-third-law_runs.csv  kinetic-energy_runs.csv  mass-energy-equivalence_runs.csv  newtons-gravity_runs.csv  newtons-second-law_runs.csv  nguyen-1_runs.csv  nguyen-4_runs.csv  nguyen-5_runs.csv  nguyen-7_runs.csv  projectile-range_runs.csv  stefan-boltzmann_runs.csv
src/: __init__.py  benchmarks.py  experiment.py  gp_engine.py  primitives.py  simplify.py  visualization.py
